Wed Apr 30 13:29:46 2003  Simon McQueen  <sm@prismtechnologies.com>

        * tests\temp\assembly\assembly.dsw:
        * tests\temp\assembly\client.dsp:
        * tests\temp\assembly\server.dsp:

          Files removed to prevent errors in the msvc 6 builds.

Tue Apr 29 16:53:17 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* README: Added XML_Helpers to the list of "tools" that need to
	  build to run CIAO.  Thanks to Diego Sevilla Ruiz
	  <dsevilla@ditec.um.es> for pointing this out.

Tue Apr 29 16:38:18 2003  Simon McQueen  <sm@prismtechnologies.com>

	* tests/temp/assembly/client.dsp:
	* tests/temp/assembly/client.dsp:
	  Fixed build VCpp6 Release error.

Mon Apr 28 21:43:01 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* examples/handcrafted/Display/RateGen/RateGen.mpc: Added missing
	  library path dependencies.  I'm not sure what has changed
	  because they used to work just fine. :)

Mon Apr 28 21:33:19 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* docs/templates/CIAO_Glue_Session_Template.cpp:
	* docs/templates/CIAO_Glue_Session_Template.h:
	* docs/templates/CIAO_Glue_Session_Template.inl:
	* examples/handcrafted/Display/GPS/GPS_svnt.cpp:
	* examples/handcrafted/Display/GPS/GPS_svnt.h:
	* examples/handcrafted/Display/GPS/GPS_svnt.inl:
	* examples/handcrafted/Display/NavDisplay/NavDisplay_svnt.cpp:
	* examples/handcrafted/Display/NavDisplay/NavDisplay_svnt.h:
	* examples/handcrafted/Display/RateGen/RateGen_svnt.cpp:
	* examples/handcrafted/Display/RateGen/RateGen_svnt.h:
	* examples/handcrafted/Display/RateGen/RateGen_svnt.inl: Fixed
	  more misuses of "valuetype_ptr" bug.  Thanks to Tao Lu
	  <tao.lu@vanderbilt.edu> for reporting them.

Mon Apr 28 20:50:09 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* docs/templates/CIAO_Glue_Session_Template.cpp:
	* docs/templates/CIAO_Glue_Session_Template.h:
	* docs/templates/CIAO_Glue_Session_Template.inl:
	* examples/handcrafted/Display/GPS/GPS_exec.cpp:
	* examples/handcrafted/Display/GPS/GPS_exec.h: