@@ -320,7 +320,7 @@ HUDisplay::NavDisplay_Exec::_unchecked_narrow (
           NavDisplay_Exec_ptr,
           obj->_tao_QueryInterface (
               ACE_reinterpret_cast (
-                  ptr_arith_t,
+                  ptrdiff_t,
                   &NavDisplay_Exec::_tao_class_id
                 )
             )
@@ -338,19 +338,19 @@ HUDisplay::NavDisplay_Exec::_duplicate (NavDisplay_Exec_ptr obj)
   return obj;
 }
 
-void *HUDisplay::NavDisplay_Exec::_tao_QueryInterface (ptr_arith_t type)
+void *HUDisplay::NavDisplay_Exec::_tao_QueryInterface (ptrdiff_t type)
 {
   void *retv = 0;
 
   if (type == ACE_reinterpret_cast (
-              ptr_arith_t,
+              ptrdiff_t,
               &ACE_NESTED_CLASS (::HUDisplay, NavDisplay_Exec)::_tao_class_id)
             )
     {
       retv = ACE_reinterpret_cast (void*, this);
     }
   else if (type == ACE_reinterpret_cast (
-              ptr_arith_t,
+              ptrdiff_t,
               &::HUDisplay::CCM_NavDisplay::_tao_class_id)
             )
     {
@@ -364,7 +364,7 @@ void *HUDisplay::NavDisplay_Exec::_tao_QueryInterface (ptr_arith_t type)
           );
     }
   else if (type == ACE_reinterpret_cast (
-              ptr_arith_t,
+              ptrdiff_t,
               &::Components::SessionComponent::_tao_class_id)
             )
     {
@@ -378,7 +378,7 @@ void *HUDisplay::NavDisplay_Exec::_tao_QueryInterface (ptr_arith_t type)
           );
     }
   else if (type == ACE_reinterpret_cast (
-              ptr_arith_t,
+              ptrdiff_t,
               &::Components::EnterpriseComponent::_tao_class_id)
             )
     {
@@ -392,7 +392,7 @@ void *HUDisplay::NavDisplay_Exec::_tao_QueryInterface (ptr_arith_t type)
           );
     }
   else if (type == ACE_reinterpret_cast (
-               ptr_arith_t,
+               ptrdiff_t,
                &CORBA::Object::_tao_class_id)
              )
     {
